--- a/baudrillard/theStyle.css
+++ b/baudrillard/theStyle.css
@@ -1,6 +1,6 @@
 
 #woman_pic{
-	height:  35vh;
+	height:  25vh;
 	width:  auto;
 	grid-column: 3;
 	grid-row: 3;
@@ -9,10 +9,11 @@
 .crowd{
 	display: grid;
 	grid-template: 20% 20% 20% 20% 20%/20% 20% 20% 20% 20%;
+	justify-content: center;
 }
 
 .crowd_pic{
-	height: 35vh;
+	height: 30vh;
 	width:  auto;
 }
 
